# kpsr-bst

./: .gitignore  .gitmodules  CMakeLists.txt  KlepsydraBstConfig.cmake.in  KlepsydraBstConfigVersion.cmake.in  README.md
.github/workflows/: prcodecheck.yml  push.yml
bst_client_server/: CMakeLists.txt
bst_client_server/modules/: CMakeLists.txt
bst_client_server/modules/bst_client_server/: CMakeLists.txt
bst_client_server/modules/bst_client_server/include/klepsydra/bst_client_server/: bst_client.h  bst_client_eventloop_provider.h  bst_main_helper.h  bst_server.h  bst_server_user_input.h  bst_test_client.h  client_state_machine.h  client_state_machine_conf.h  group_definitions.h
bst_client_server/modules/bst_client_server/src/: bst_client.cpp  bst_main_helper.cpp  bst_server.cpp  bst_server_user_input.cpp  bst_test_client.cpp  client_state_machine.cpp  client_state_machine_conf.cpp
bst_client_server/modules/dds_mdlw/: CMakeLists.txt
bst_client_server/modules/dds_mdlw/conf/: bst_dds_client.yaml  bst_dds_server.yaml  containers-dds.json  traj_monitoring.json
bst_client_server/modules/dds_mdlw/src/: bst_dds_client.cpp  bst_dds_server.cpp
bst_client_server/modules/mem_mdlw/: CMakeLists.txt
bst_client_server/modules/mem_mdlw/conf/: bst_mem_el_client_server.yaml  bst_mem_sf_client_server.yaml  containers-mem-el.json  containers-mem-sf.json
bst_client_server/modules/mem_mdlw/src/: bst_mem_el_client_server.cpp  bst_mem_sf_client_server.cpp
bst_client_server/modules/zmq_mdlw/: CMakeLists.txt
bst_client_server/modules/zmq_mdlw/conf/: bst_zmq_client.yaml  bst_zmq_proxy_server.yaml  bst_zmq_server.yaml  containers-zmq.json
bst_client_server/modules/zmq_mdlw/src/: bst_kpsr_zmq_proxy_server.cpp  bst_zmq_client.cpp  bst_zmq_server.cpp
bst_client_server/tests/: CMakeLists.txt
bst_client_server/tests/bst_client_server_tests/: CMakeLists.txt
bst_client_server/tests/bst_client_server_tests/include/: bst_client_test_middleware_provider.h
bst_client_server/tests/bst_client_server_tests/src/: bst_client_test.cpp  client_state_machine_test.cpp  main.cpp
bst_comms/: CMakeLists.txt
bst_comms/kidl/: bst2kpsr_internal_message.yaml  bst_reply_message.yaml  bst_request_message.yaml  waypoint_command_message.yaml  waypoint_message.yaml
bst_comms/modules/: CMakeLists.txt
bst_comms/modules/bst_comms/: CMakeLists.txt
bst_comms/modules/bst_comms/include/klepsydra/bst_comms/: bst2kpsr_adaptor_service.h  bst2kpsr_broadcaster.h  bst2kpsr_middleware_provider.h  bst2kpsr_modules.h  bst_client_middleware_provider.h  bst_kpsr_event_names.h  bst_server_middleware_provider.h  comm_interface_service.h  group_definitions.h  lat_long_utils.h  quaternion_utils.h  request_reply_correlation.h  telemetry_pose_service.h
bst_comms/modules/bst_comms/src/: bst2kpsr_adaptor_service.cpp  bst2kpsr_broadcaster.cpp  bst2kpsr_middleware_provider.cpp  bst2kpsr_modules.cpp  bst_utils.cpp  comm_interface_service.cpp  lat_long_utils.cpp  telemetry_pose_service.cpp
bst_comms/modules/dds_mdlw/: CMakeLists.txt
bst_comms/modules/dds_mdlw/idl/: bst_packet_data.idl
bst_comms/modules/dds_mdlw/include/klepsydra/dds_bst_comms/: bst_client_dds_provider.h  bst_dds_topic_names.h  bst_packet_data_dds_mapper.h  bst_server_dds_provider.h  group_definitions.h
bst_comms/modules/dds_mdlw/src/: bst_client_dds_provider.cpp  bst_server_dds_provider.cpp
bst_comms/modules/mem_mdlw/: CMakeLists.txt
bst_comms/modules/mem_mdlw/include/klepsydra/mem_bst_comms/: bst_client_server_eventloop_provider.h  bst_client_server_mem_provider.h  group_definitions.h
bst_comms/modules/mem_mdlw/src/: bst_client_server_mem_provider.cpp
bst_comms/modules/zmq_mdlw/: CMakeLists.txt
bst_comms/modules/zmq_mdlw/include/klepsydra/zmq_bst_comms/: bst_client_zmq_provider.h  bst_server_zmq_provider.h  bst_zmq_topic_names.h  group_definitions.h
bst_comms/modules/zmq_mdlw/src/: bst_client_zmq_provider.cpp  bst_server_zmq_provider.cpp
bst_comms/tests/: CMakeLists.txt
bst_comms/tests/dds_bst_comms_tests/: CMakeLists.txt
bst_comms/tests/dds_bst_comms_tests/src/: ddsstg_bst_comms_test.cpp  main.cpp
bst_comms/tests/zmq_bst_comms_tests/: CMakeLists.txt
bst_comms/tests/zmq_bst_comms_tests/src/: zmqstg_bst_comms_test.cpp
ci/ROS/: Jenkinsfile
ci/Vanilla/: Dockerfile_Vanilla  Jenkinsfile
ci/ZMQ/: Dockerfile_ZMQ  Jenkinsfile
trajectory_monitoring/: CMakeLists.txt
trajectory_monitoring/kidl/: angular_rates.yaml  gps_position.yaml  linear_velocity.yaml  orientation.yaml  position.yaml  trajectory_request.yaml  trajectory_response.yaml
trajectory_monitoring/modules/: CMakeLists.txt
trajectory_monitoring/modules/mem_mdlw/: CMakeLists.txt
trajectory_monitoring/modules/mem_mdlw/include/klepsydra/mem_trajectory_monitoring/: el_rest_traj_mon_container_provider.h  el_traj_mon_comms_provider.h  group_definitions.h  sf_rest_traj_mon_container_provider.h  sf_traj_mon_comms_provider.h
trajectory_monitoring/modules/mem_mdlw/src/: sf_rest_traj_mon_container_provider.cpp  sf_traj_mon_comms_provider.cpp
trajectory_monitoring/modules/trajectory_monitoring/: CMakeLists.txt
trajectory_monitoring/modules/trajectory_monitoring/include/klepsydra/trajectory_monitoring/: bst_trajectory_data_provider.h  group_definitions.h  rest_trajectory_monitoring_interface.h  trajectory_callback_handler_provider.h  trajectory_command_types.h  trajectory_container.h  trajectory_data_provider.h
trajectory_monitoring/modules/trajectory_monitoring/src/: bst_trajectory_data_provider.cpp  rest_trajectory_monitoring_interface.cpp  trajectory_container.cpp
trajectory_monitoring/tests/: CMakeLists.txt
trajectory_monitoring/tests/trajectory_monitoring_tests/: CMakeLists.txt
trajectory_monitoring/tests/trajectory_monitoring_tests/src/: bst_trajectory_data_provider_test.cpp  main.cpp  rest_traj_mon_interface_test.cpp  trajectory_container_test.cpp
